DIAC-193 covering all ftpa docs and cleaning